figue/tests/integration/snapshots/main__integration__subcommand_errors__subcommand_unexpected_extra_positional.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: could not parse command-line arguments

Sources:
├─ cli --settings.*
└─ defaults

help................ false...... DEFAULT
html_help........... false...... DEFAULT
version............. false...... DEFAULT
completions......... <default>.. DEFAULT
export_jsonschemas.. <default>.. DEFAULT
command............. Init::..... init
└─ name.. myproject.. myproject

Run with --help for usage information.
Error: unexpected argument: extra-arg
   ╭─[ <cli>:1:16 ]
   │
 1 │ init myproject extra-arg
   │                ────┬────  
   │                    ╰────── unexpected argument: extra-arg
───╯
